croppa --fix/v1

--- a/assets/scss/sections/_profile.scss
+++ b/assets/scss/sections/_profile.scss
@@ -383,11 +383,11 @@
   }
   .cover {
     width: 100%;
-    height: 0;
-    padding-bottom: 25%;
+    height: 382px;
     background-position: center;
     background-size: cover;
     border-radius: 4px 4px 0 0;
+    background-repeat: no-repeat;
   }
   .avatar {
     margin: 0;
@@ -665,3 +665,26 @@
   }
 }
 
+@media only screen and (max-width: 1249px){
+  .cover-with-avatar{
+    .cover{
+      height: calc(910px / 4);
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px){
+  .cover-with-avatar{
+    .cover{
+      height: calc(540px / 4);
+    }
+  }
+}
+
+@media only screen and (max-width: 540px){
+  .cover-with-avatar{
+    .cover{
+      height: calc(100vw / 4);
+    }
+  }
+}
